--- a/config.json
+++ b/config.json
@@ -328,7 +328,7 @@
       },
       {
         "slug": "strain",
-        "name": "Strain",
+        "name": "strain",
         "uuid": "8a4f0fdd-831f-4e28-9cf9-391b725bcf69",
         "practices": [],
         "prerequisites": [],
